--- a/style.css
+++ b/style.css
@@ -1,47 +1,126 @@
-.img {
-  padding: 0;
-  width: 450px;
-  height: 300px; 
+body, html {
+  height: 100%;
+  background: #ccc;
+  margin: 0;
+}
+
+.wrapper {
+  font-size: 0;
+  white-space: nowrap;
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  width: 20%;
+  height: 100%;
+  display: inline-block;
   position: relative;
+}
+
+.image {
+  position: relative;
+  width: 80%;
+  height: 100%;
+  display: inline-block;
   box-sizing: border-box;
-  border: 2px solid;
-  margin: 0 auto;
+  background: url(image01.jpg) no-repeat;
+  background-size: 100% 100%;
+  box-shadow: 0 0 6px 2px rgba(0, 0 , 0 , 1)
+}
+
+.target {
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  top: 20px;
+  bottom: 20px;
+  border-radius: 25px;
+  background: #ccc;
+  box-shadow: inset 0 0 6px 2px rgba(0, 0 , 0 , 1);
+  padding: 0;
+  list-style: none;
 }
 
 .clip { 
   position: absolute; 
   top: 0; 
-  left: 0; 
+  left: 0;
+  border-radius: 25px;
   background: url(image01.jpg) no-repeat; 
-  background-size: 400%;
-  width: 25%;
-  height: 50%;
+  background-size: 100% 100%;
+  width: 50%;
+  height: 25%;
   list-style: none;
-  transition: all 0.1s;
+  z-index: 1000;
 }
 
-.clip.top1 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 0 0; }
-.clip.top2 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 0 0; }
+.target .clip {
+  width: 100%;
+  height: 100%;
+  left: auto!important;
+  top: auto!important;
+  display: none;
+  transition: all .5s;
+}
+.target .clip.show {
+  display: block;
+}
 
-.clip.top3 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 33.5% 0; left: 25%; }
-.clip.top4 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 33.5% 0; left: 25%; }
+.clip.slice1 { clip-path: polygon(0 0, 80% 0, 50% 60%, 0 25%); -webkit-clip-path: polygon(0 0, 80% 0, 50% 60%, 0 25%); left: 25%; top: 50%; }
+.clip.slice2 { clip-path: polygon(100% 0, 100% 100%, 95% 100%, 60% 40%, 80% 0); -webkit-clip-path: polygon(100% 0, 100% 100%, 95% 100%, 60% 40%, 80% 0); left: 25%; top: 0; }
+.clip.slice3 { clip-path: polygon(0 25%, 50% 60%, 30% 100%, 0% 100%); -webkit-clip-path: polygon(0 25%, 50% 60%, 30% 100%, 0% 100%); left: 25%; top: 75%; }
+.clip.slice4 { clip-path: polygon(60% 40%, 30% 100%, 95% 100%); -webkit-clip-path: polygon(60% 40%, 30% 100%, 95% 100%); left: 25%; top: 25%; }
 
-.clip.top5 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 67% 0; left: 50%; }
-.clip.top6 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 67% 0; left: 50%; }
+/*left: -268px; top: 202px;*/
+/*left: -412px; top: 71px;*/
+/*left: -228px; top: 270px;*/
+/*left: -341px; top: -40px;*/
 
-.clip.top7 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 100% 0; left: 75%; }
-.clip.top8 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 100% 0; left: 75%; }
+/*.img {*/
+  /*padding: 0;*/
+  /*width: 450px;*/
+  /*height: 300px; */
+  /*position: relative;*/
+  /*box-sizing: border-box;*/
+  /*border: 2px solid;*/
+  /*margin: 0 auto;*/
+/*}*/
 
-.clip.bottom1 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 0 100%; }
-.clip.bottom2 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 0 100%; }
+/*.clip { */
+  /*position: absolute; */
+  /*top: 0; */
+  /*left: 0; */
+  /*background: url(image01.jpg) no-repeat; */
+  /*background-size: 400%;*/
+  /*width: 25%;*/
+  /*height: 50%;*/
+  /*list-style: none;*/
+  /*transition: all 0.1s;*/
+/*}*/
 
-.clip.bottom3 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 33.5% 100%; left: 25%; }
-.clip.bottom4 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 33.5% 100%; left: 25%; }
+/*.clip.top1 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 0 0; }*/
+/*.clip.top2 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 0 0; }*/
 
-.clip.bottom5 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 67% 100%; left: 50%; }
-.clip.bottom6 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 67% 100%; left: 50%; }
+/*.clip.top3 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 33.5% 0; left: 25%; }*/
+/*.clip.top4 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 33.5% 0; left: 25%; }*/
 
-.clip.bottom7 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 100% 100%; left: 75%; }
-.clip.bottom8 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 100% 100%; left: 75%; }
+/*.clip.top5 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 67% 0; left: 50%; }*/
+/*.clip.top6 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 67% 0; left: 50%; }*/
+
+/*.clip.top7 { clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 100% 0; left: 75%; }*/
+/*.clip.top8 { clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 100% 0; left: 75%; }*/
+
+/*.clip.bottom1 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 0 100%; }*/
+/*.clip.bottom2 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 0 100%; }*/
+
+/*.clip.bottom3 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 33.5% 100%; left: 25%; }*/
+/*.clip.bottom4 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 33.5% 100%; left: 25%; }*/
+
+/*.clip.bottom5 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 67% 100%; left: 50%; }*/
+/*.clip.bottom6 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 67% 100%; left: 50%; }*/
+
+/*.clip.bottom7 { bottom: 0; top: auto; clip-path: polygon(0 0, 0 100%, 100% 100%); -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%); background-position: 100% 100%; left: 75%; }*/
+/*.clip.bottom8 { bottom: 0; top: auto; clip-path: polygon(0 0, 100% 0, 100% 100%); -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%); background-position: 100% 100%; left: 75%; }*/
 
   
